@@ -1,3 +1,7 @@
+2003-06-15  Petr Stehlik  <pstehlik@sophics.cz>
+* compfile.c - quick fix for non-zlib capable environments
+
+
 2003-05-28  Petr Stehlik  <pstehlik@sophics.cz>
 * cpu_m68k.asm - major update, brings it to the 1.3.0+ level of cpu.c
   Thanks Gerhard.
